--- a/ide/ui/ide-database/src/main/resources/ide-database/index.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/index.html
@@ -70,12 +70,12 @@
 		}]);
 	</script>
 	
-	<script language="JavaScript">
+	<!-- <script language="JavaScript">
 	    window.addEventListener('beforeunload', function (e) {
 		  e.preventDefault();
 		  e.returnValue = '';
 		});
-	</script>
+	</script> -->
 	
 </body>
 
