--- a/ide/ui/ide-database/src/main/resources/ide-database/explorer/explorer.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/explorer/explorer.html
@@ -49,9 +49,13 @@
 			<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="refreshDatabase()"><i class="fa fa-refresh"></i></button>
 		
 			<select ng-model="selectedDatabase" ng-options="o as o for o in databases" ng-change="databaseChanged()"
-				class="dropdown btn btn-default dropdown-toggle dropdown-top" title="Databases"></select>
+				class="dropdown btn btn-default dropdown-toggle dropdown-top"
+				style="border-top: none; border-right: none; border-left: none; border-image: initial; border-bottom: 1px solid; margin-top: 2px;"
+				title="Databases"></select>
 			<select ng-model="selectedDatasource" ng-options="o as o for o in datasources" ng-change="datasourceChanged()"
-				class="dropdown btn btn-default dropdown-toggle dropdown-top" title="Datasources"></select>
+				class="dropdown btn btn-default dropdown-toggle dropdown-top"
+				style="border-top: none; border-right: none; border-left: none; border-image: initial; border-bottom: 1px solid; margin-top: 2px;"
+				title="Datasources"></select>
 		</div>
 	  </div>
 	</div>
