--- a/ide/ui/ide-git/src/main/resources/ide-git/git/staging.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/staging.html
@@ -105,7 +105,7 @@
 						<input class="col-sm-6 form-control" type="password" placeholder="" ng-model="staging.password" required="required">
 					</div>
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Author:</label>
+						<label class="col-sm-2 col-form-label">Email:</label>
 						<input class="col-sm-6 form-control" type="text" placeholder="" ng-model="staging.email" required="required">
 						<!-- <label class="col-sm-2 col-form-label">Committer:</label>
 						<input class="col-sm-6 form-control" type="text" placeholder="" ng-model="staging.committer" required="required"> -->
