--- a/ide/ui/ide-git/src/main/resources/ide-git/git/history.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/history.html
@@ -49,7 +49,7 @@
 
 <body border="1px" ng-app="historyApp" ng-controller="HistoryContoller as history">
 	<div class="view-fixed-top">
-		<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="history.refresh()"><i class="fa fa-refresh"></i></button>
+		<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="history.refreshRepository()"><i class="fa fa-refresh"></i></button>
 		Project: <b> {{history.selectedProject}} </b>
 	</div>
 	<div class="workspace" style="height: 100%">
