--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -60,6 +60,7 @@
 			<button id="pull" type="button" class="btn btn-default" ng-show="false" title="Pull Project" data-toggle="modal" data-target="#dialogPull"><i class="fa fa-download"></i></button>
 			<button id="push" type="button" class="btn btn-default" ng-show="false" title="Push Project" data-toggle="modal" data-target="#dialogPush"><i class="fa fa-upload"></i></button>
 			<button id="reset" type="button" class="btn btn-default" ng-show="false" title="Reset Project" data-toggle="modal" data-target="#dialogReset"><i class="fa fa-recycle"></i></button>
+			<button id="import" type="button" class="btn btn-default" ng-show="false" title="Import Project(s)" data-toggle="modal" data-target="#dialogImport"><i class="fa fa-download"></i></button>
 			<button id="delete" type="button" class="btn btn-default" ng-show="false" title="Delete Project" data-toggle="modal" data-target="#dialogDelete"><i class="fa fa-times"></i></button>
 			<button id="share" type="button" class="btn btn-default" ng-show="false" title="Share Project" data-toggle="modal" data-target="#dialogShare"><i class="fa fa-share"></i></button>
 			<button id="checkout" type="button" class="btn btn-default" ng-show="false" title="Checkout Branch" data-toggle="modal" data-target="#dialogCheckout"><i class="fa fa-check-circle-o"></i></button>
@@ -272,6 +273,22 @@
 	    </div>
 	    <div class="modal-footer">
 	      <button class="btn btn-primary" ng-click="workspace.okReset()" data-toggle="modal" data-target="#dialogReset">Reset</button>
+	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+	    </div>
+	</div>
+
+	<!-- Import -->
+	<div class="modal fade" id="dialogImport" tabindex="-1" role="dialog" aria-labelledby="dialogImportLabel" aria-hidden="true">
+	    <div class="modal-header">
+	        <h4>Import Project(s) from Repository</h4>
+	    </div>
+	    <div class="modal-body">
+	        <div class="form-group row">
+				<label class="col-xs-12 col-form-label">Do you want to Import Project(s) from the selected Git Repository?</label>
+			</div>
+	    </div>
+	    <div class="modal-footer">
+	      <button class="btn btn-primary" ng-click="workspace.okImport()" data-toggle="modal" data-target="#dialogImport">Import</button>
 	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
 	    </div>
 	</div>
