--- a/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
@@ -276,6 +276,72 @@
 				};
 			};
 
+			function createCloseAction(){
+				return {
+					// An unique identifier of the contributed action.
+					id: 'dirigible-close',
+
+					// A label of the action that will be presented to the user.
+					label: 'Close',
+
+					// An optional array of keybindings for the action.
+					keybindings: [
+						monaco.KeyMod.Alt  | monaco.KeyCode.KEY_W
+					],
+
+					// A precondition for this action.
+					precondition: null,
+
+					// A rule to evaluate on top of the precondition in order to dispatch the keybindings.
+					keybindingContext: null,
+
+					contextMenuGroupId: 'fileIO',
+
+					contextMenuOrder: 1.5,
+
+					// Method that will be executed when the action is triggered.
+					// @param editor The editor instance is passed in as a convinience
+					run: function(editor) {
+						var fileIO = new FileIO();
+						var fileName = fileIO.resolveFileName();
+						messageHub.post({fileName: fileName}, 'ide-core.closeEditor');
+					}
+				};
+			};
+
+			function createCloseOthersAction(){
+				return {
+					// An unique identifier of the contributed action.
+					id: 'dirigible-close-others',
+
+					// A label of the action that will be presented to the user.
+					label: 'Close Others',
+
+					// An optional array of keybindings for the action.
+					keybindings: [
+						monaco.KeyMod.Alt | monaco.KeyMod.WinCtrl | monaco.KeyMod.Shift | monaco.KeyCode.KEY_W
+					],
+
+					// A precondition for this action.
+					precondition: null,
+
+					// A rule to evaluate on top of the precondition in order to dispatch the keybindings.
+					keybindingContext: null,
+
+					contextMenuGroupId: 'fileIO',
+
+					contextMenuOrder: 1.5,
+
+					// Method that will be executed when the action is triggered.
+					// @param editor The editor instance is passed in as a convinience
+					run: function(editor) {
+						var fileIO = new FileIO();
+						var fileName = fileIO.resolveFileName();
+						messageHub.post({fileName: fileName}, 'ide-core.closeOtherEditors');
+					}
+				};
+			};
+
 			function createCloseAllAction(){
 				return {
 					// An unique identifier of the contributed action.
@@ -379,6 +445,7 @@
 							_editor.addAction(createSaveAction());
 							_editor.addAction(createSearchAction());
 							_editor.addAction(createCloseAction());
+							_editor.addAction(createCloseOthersAction());
 							_editor.addAction(createCloseAllAction());
 							_editor.onDidChangeCursorPosition(function(e) {
 								var caretInfo = "Line " + e.position.lineNumber + " : Column " + e.position.column;
