Unpublish + removing Versions and Info metadata objects from Repository

--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -69,7 +69,7 @@
 			<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="workspace.refresh()"><i class="fa fa-refresh"></i></button>
 			
 			<select ng-model="workspace.selectedWorkspace" ng-options="o as o for o in workspace.workspaces" ng-change="workspace.workspaceSelected()"
-				class="dropdown btn btn-default dropdown-toggle dropdown-top" style="border-top: none; border-right: none; border-left: none; border-image: initial; border-bottom: 1px solid; margin-top: 2px;" title="Workspaces"></select>
+				class="dropdown btn btn-default dropdown-toggle dropdown-top" title="Workspaces"></select>
 		</div>
 	  </div>
 	</div>
