--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -82,7 +82,7 @@
 			
 			<button type="button" class="btn btn-default btn-top" title="Create Workspace" ng-click="workspace.createWorkspace()"><i class="fa fa-clone"></i></button>
 			<select ng-model="workspace.selectedWorkspace" ng-options="o as o for o in workspace.workspaces" ng-change="workspace.workspaceSelected()"
-				class="dropdown dropdown-toggle dropdown-top" style="border: none; border-bottom: 1px solid; margin-top: 2px;" title="Workspaces"></select>
+				class="dropdown btn btn-default dropdown-toggle dropdown-top" title="Workspaces"></select>
 			
 		</div>
 	  </div>
