--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/search.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/search.html
@@ -52,7 +52,7 @@
 		    <div class="input-group">
 		      <div class="input-group-addon view-toolbar form-group">
 			      <select ng-model="workspace.selectedWorkspace" ng-options="o as o for o in workspace.workspaces" ng-change="workspace.workspaceSelected()"
-				     class="dropdown dropdown-toggle dropdown-top form-control" title="Workspaces"></select>
+				     class="dropdown dropdown-toggle dropdown-top form-control search-dropdown" title="Workspaces"></select>
 		      </div>
 		    </div>
 		    <div class="input-group">
